# gba-sprite-engine

./: CMakeLists.txt  LICENSE  README.md
Images/Car/: Car.c  Car.h
Images/Coin/: Coin.c  Coin.h
crossy_road/: CMakeLists.txt
crossy_road/background/: Start.h  bgCarCollision.c  bgFinishScene.c  bgGameScreen.c  bgRiverCollision.c  startscreen.c
crossy_road/soundEffects/: carStopSound.h  coinPickUp.h  dropSound.h  explosion.h
crossy_road/sprites/: shared.c
crossy_road/sprites/biomes/: coin.cpp
crossy_road/sprites/biomes/Grass/: Grass.c  grassSlide.cpp  tree.cpp
crossy_road/sprites/biomes/Road/: car.cpp  road.cpp
crossy_road/sprites/biomes/Water/: treetrunk.cpp  water.cpp  waterlily.cpp
crossy_road/sprites/bird/: birdForward.c  birdForwardMove.c  birdLeft.c  birdLeftMove.c
crossy_road/sprites/car/: Car.c
crossy_road/sprites/cloud/: cloud0.c  cloud1.c  cloud2.c  shared.c
crossy_road/sprites/coin/: Coin.c
crossy_road/sprites/explosion/: Car.c  birdLeft.c  birdLeftMove.c  explosion.c  shared.c
crossy_road/sprites/leaf/: Leaf.c
crossy_road/sprites/tree/: Tree.c
crossy_road/sprites/treetrunk/: TreeTrunk.c
crossy_road/sprites/waterDrip/: birdForwardMove.c  shared.c  waterBubble.c
crossy_road/src/: GameScreen.cpp  GameScreen.h  HomeStartScene.cpp  HomeStartScene.h  carCollisionScene.cpp  carCollisionScene.h  finishScene.cpp  finishScene.h  main.cpp  riverCollisionScene.cpp  riverCollisionScene.h
crossy_road/src/sprites/: bird.cpp  bird.h  car.cpp  car.h  coin.cpp  coin.h  treeTrunk.cpp  treeTrunk.h
engine/: CMakeLists.txt
(+17 files in other folders)
